5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1674_1104.log
== TEST (2019-04-30 10:34:26) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((a >= b) or (c >= d)):
	print("Entradas invalidas")
elif ((a < b) and (b < c) and (c < d))
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- ERROR:
File "XXXX", line 11
    elif ((a < b) and (b < c) and (c < d))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:34:33) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((a >= b) or (c >= d)):
	print("Entradas invalidas")
elif ((a < b) and (b < c) and (c < d)):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 1.0 , 2.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:35:07) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((a >= b) or (c >= d)):
	print("Entradas invalidas")
elif ((a < b) or (b < c) or (c < d)):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 1.0 , 2.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:35:16) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((a >= b) or (c >= d)):
	print("Entradas invalidas")
elif ((a < b) or (b < c) or (c < d)):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- EXECUTION TIME:
0.1293
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 1.0 , 2.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 1.5 , 5.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: -1.0 , -3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:36:39) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((a >= b) or (c >= d)):
	print("Entradas invalidas")
elif (b < c):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 1.0 , 2.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:17) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", a, ",", b)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (b < c):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 1.0 , 2.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:51) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (b < c):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:38:54) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (b < c):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:39:57) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (c > b):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:42) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (c < a) or (c > b):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:46) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (c < a) or (c > b):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:41:53) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))

print("Intervalo 1:", a, ",", b)
print("Intervalo 2:", c, ",", d)

if ((b <= a) or (d <= c)):
	print("Entradas invalidas")
elif (c < a) or (c > b):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- EXECUTION TIME:
0.195037
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
